# winpython

./: .gitattributes  .gitignore  .hgignore  Cod_requirements64.txt  Cod_requirements64jl2.txt  LICENSE  MANIFEST.in  Qt5_requirements64.txt  Qt5_requirements64jl2.txt  README  README.rst  __init__.py  build_dist.bat  build_winpython_meta.py  checklist.txt  constraints.txt  diff.py  dot_requirements.txt  generate_a_winpython_distro.bat  generate_a_winpython_distropy.bat  generate_a_winpython_distropy_meta.bat  generate_winpython_distros27.bat  generate_winpython_distros310_dot.bat  generate_winpython_distros310_qt5.bat  generate_winpython_distros311_dot.bat  generate_winpython_distros311_mkl.bat  generate_winpython_distros311_qt5.bat  generate_winpython_distros312_dot.bat  generate_winpython_distros313_dot.bat  generate_winpython_distros313_slim.bat  generate_winpython_distros313_wheel.bat  generate_winpython_distros33.bat  generate_winpython_distros34.bat  generate_winpython_distros34_qt5.bat  generate_winpython_distros35_qt5.bat  generate_winpython_distros36_qt5.bat  generate_winpython_distros37_qt5.bat  generate_winpython_distros38_qt5.bat  generate_winpython_distros38_qt5jl2.bat  generate_winpython_distros39_dot.bat  (+22 more)
changelogs/: WinPython-2.7.10.1.md  WinPython-2.7.10.1_History.md  WinPython-2.7.10.2.txt  WinPython-2.7.10.2_History.txt  WinPython-2.7.10.3.md  WinPython-2.7.10.3_History.txt  WinPython-2.7.3.0.md  WinPython-2.7.3.0.txt  WinPython-2.7.3.1.md  WinPython-2.7.3.1.txt  WinPython-2.7.3.1_History.md  WinPython-2.7.3.1_History.txt  WinPython-2.7.3.2.md  (+798 more)
(+476 files in other folders)
